# bananas-haar-cascade-classifier

./: README.md  params.py  pyproject.toml  result.xml
bananas_haar_cascade_classifier/: utils.py
haar_cascade_classifier/: generate_xml.py  negatives_to_txt.py  preprocessing.py  test_classifier.py  train.py
misc/: info.txt
