[tool.poetry]
name = "bananas_haar_cascade_classifier"
version = "0.1.0"
description = ""
authors = ["Rafael Santos <rafaelsantos32141@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pillow = "^10.4.0"

[tool.poetry.scripts]
preprocess = "bananas_haar_cascade_classifier.preprocessing:run"
negatives_to_txt = "bananas_haar_cascade_classifier.negatives_to_txt:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
